Fixed layout issues

--- a/app/assets/stylesheets/clients.css.scss
+++ b/app/assets/stylesheets/clients.css.scss
@@ -159,6 +159,7 @@
     color: #00ace5;
     padding-bottom: 6px;
     float: left;
+    width: 50%;
   }
   a.client_new_invoice,
   a.client_new_payment{
