--- a/app/assets/stylesheets/payments_collected.css.scss
+++ b/app/assets/stylesheets/payments_collected.css.scss
@@ -1,7 +1,7 @@
 .payments_collected {
   .grid_table table{
-    col.one  {width: 81px;}
-    col.two  {width: 201px;}
+    col.one  {width: 115px;}
+    col.two  {width: 167px;}
     col.three{width: 71px;}
     col.four {width: 286px;}
     col.five {width: 92px;}
